# ugc-service

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose-elk.yml  docker-compose-sentry.yml  docker-compose.yml
.github/workflows/: ugc_api.yml
configs/nginx/: nginx.conf
configs/nginx/sites/: default.conf  ugc.conf
elk/: filebeat.yml  logstash.conf
mongodb/: init-config.js  init-mongos.js  init-shard1.js  init-shard2.js
research/: README.md  constants.py  docker-compose.yml  generate_data.py  load_data.py  requirements.txt  test_performance.py
tools/: generate_token.py
tools/keys/: example_private_key.pem  example_public_key.pem
ugc_api/: Dockerfile  Dockerfile.test  entrypoint.sh  pyproject.toml  setup.cfg
ugc_api/src/: handlers.py  main.py
ugc_api/src/api/v1/: __init__.py  bookmark.py  movie.py  pagination.py  reactions.py  review.py
ugc_api/src/core/: config.py  logger.py
ugc_api/src/db/: mongodb.py
ugc_api/src/documents/: bookmark.py  movie.py  reaction.py  review.py
ugc_api/src/exceptions/: auth_exceptions.py  base.py
ugc_api/src/middlewares/: request_id.py
ugc_api/src/schemas/: auth.py  bookmark.py  movie.py  reaction.py  review.py
ugc_api/src/services/: jwt_token.py  reactions.py
ugc_api/src/services/repositories/: base.py  bookmarks.py  movies.py  reactions.py  reviews.py
ugc_api/src/tests/: conftest.py  test_api.py  test_bookmarks.py  test_movies.py  test_reactions.py  test_reviews.py
