[project]
name = "ugc-api"
version = "0.1.0"
description = "UGC API with MongoDB"
requires-python = ">=3.11"
dependencies = [
    "beanie>=1.29.0",
    "fastapi[standard]>=0.115.7",
    "orjson>=3.10.15",
    "pydantic-settings>=2.7.1",
    "pyjwt[crypto]>=2.10.1",
    "sentry-sdk>=2.20.0",
]

[tool.uv]
dev-dependencies = [
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pre-commit>=4.1.0",
    "ruff>=0.9.3",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "mongomock-motor>=0.0.25",
    "httpx>=0.27.0",
    "ruff>=0.9.3",
    "mypy>=1.14.1",
    "asgi-lifespan>=2.1.0",
    "dependency-injector>=4.41.0",
    "pytest-mock>=3.12.0",
]

[tool.ruff]
line-length = 119
target-version = "py312"
exclude = [".venv", "research"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "YTT",
    "ANN",
    "PL",
    "UP",
]
ignore = ["ANN401", "ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "S105", "S106"]
"migrations/*" = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]
"schemas/*.py" = ["D101", "D102", "D106", "D107"]
"documents/*.py" = ["D101", "D102", "D106", "D107"]
"api/v1/*.py" = ["D100", "D101", "D102", "D103"]

[tool.ruff.lint.pylint]
max-args = 7

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = ["research/", "tools/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
python_files = ["test_*.py"]
addopts = "-v -s --tb=short"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119
skip = [".venv"]
combine_as_imports = true
balanced_wrapping = true
sections = ["STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["api", "core", "db", "documents", "exceptions", "middlewares", "services", "main", "handlers"]
import_heading_stdlib = "stdlib"
import_heading_thirdparty = "thirdparty"
import_heading_firstparty = "project"
